# StaticCalibration

./: .gitignore  CMakeConfig.h.in  CMakeLists.txt  README.md  roadmap.md  teamscale_plugin_mappings.properties
app/: CMakeLists.txt  CalibrateByHand.cpp  CommandLineParser.cpp  StaticCalibration.cpp
config/: CMakeLists.txt  default.yaml  s40_n_far.yaml  s40_n_near.yaml  s50_s_far.yaml  s50_s_near.yaml
config/s40_n_far/: config.yaml  mapping.yaml  marked_pixels.yaml
config/s40_n_near/: config.yaml  mapping.yaml  marked_pixels.yaml
config/s50_s_far/: config.yaml  mapping.yaml  marked_pixels.yaml
config/s50_s_near/: config.yaml  mapping.yaml  marked_pixels.yaml
evaluation/: CMakeLists.txt  CSVWriter.cpp  CSVWriter.hpp  Commons.cpp  Commons.hpp  EvaluateStaticCalibration.cpp
include/StaticCalibration/: CameraPoseEstimation.hpp  CameraPoseEstimationBase.hpp  CameraPoseEstimationWithIntrinsics.hpp
include/StaticCalibration/camera/: RenderingPipeline.hpp
include/StaticCalibration/objects/: DataSet.hpp  ImageObject.hpp  ObjectsLoading.hpp  ParametricPoint.hpp  WorldObject.hpp  YAMLExtension.hpp
include/StaticCalibration/residuals/: CorrespondenceResidual.hpp  CorrespondenceResidualBase.hpp  CorrespondenceWithIntrinsicsResidual.hpp  DistanceFromIntervalResidual.hpp  DistanceResidual.hpp
include/StaticCalibration/utils/: CSVWriter.hpp  CommandLineParser.hpp  Formatters.hpp  RenderUtils.hpp
misc/: CMakeLists.txt  explicit_road_marks.ply  lane_samples.yaml  mapping.yaml  objects.ply  objects.yaml  objects_old.yaml  pixels.yaml  pixels_min_num.yaml  pixels_only_bottom.yaml  pixels_only_top.yaml  pixels_only_top_bottom.yaml  pixels_sorted_by_x.yaml  pixels_undetermined.yaml  road_marks.yaml
other/: main.py
other/loss_plots/mnt/local_data/providentia/static_calibration/s40/n/far/results/: events.out.tfevents.1632135884.workstation-providentia-dev
other/loss_plots/mnt/local_data/providentia/static_calibration/s40/n/far/results/0/: events.out.tfevents.1632165604.workstation-providentia-dev
other/loss_plots/mnt/local_data/providentia/static_calibration/s40/n/far/results/1/: events.out.tfevents.1632165604.workstation-providentia-dev
other/loss_plots/mnt/local_data/providentia/static_calibration/s40/n/far/results/2/: events.out.tfevents.1632165604.workstation-providentia-dev
other/loss_plots/mnt/local_data/providentia/static_calibration/s40/n/far/results/3/: events.out.tfevents.1632165604.workstation-providentia-dev
other/loss_plots/mnt/local_data/providentia/static_calibration/s40/n/near/results/: events.out.tfevents.1632135884.workstation-providentia-dev
other/loss_plots/mnt/local_data/providentia/static_calibration/s40/n/near/results/0/: events.out.tfevents.1632165596.workstation-providentia-dev  events.out.tfevents.1632165604.workstation-providentia-dev
other/loss_plots/mnt/local_data/providentia/static_calibration/s40/n/near/results/1/: events.out.tfevents.1632165586.workstation-providentia-dev  events.out.tfevents.1632165604.workstation-providentia-dev
src/: CMakeLists.txt  CMakeLists.txt.in  CameraPoseEstimation.cpp  CameraPoseEstimationBase.cpp  CameraPoseEstimationWithIntrinsics.cpp
src/camera/: RenderingPipeline.cpp
src/objects/: DataSet.cpp  ImageObject.cpp  ObjectsLoading.cpp  ParametricPoint.cpp  WorldObject.cpp  YAMLExtension.cpp
src/residuals/: CorrespondenceResidual.cpp  CorrespondenceResidualBase.cpp  CorrespondenceWithIntrinsicsResidual.cpp  DistanceFromIntervalResidual.cpp  DistanceResidual.cpp
src/utils/: CSVWriter.cpp  CommandLineParser.cpp  Formatters.cpp  RenderUtils.cpp  coordinate_converter.py
test/: CMakeLists.txt  CameraPoseEstimationTests.cpp  CameraTestBase.cpp  CameraTestBase.hpp  DataSetTests.cpp  ImageTestBase.cpp  ImageTestBase.hpp  ObjectsLoadingTests.cpp  RenderingPipelineTests.cpp  ResidualsTests.cpp
