cmake_minimum_required(VERSION 3.10)

########################################################################################################################
### Project definition ###
########################################################################################################################
project(StaticCalibration C CXX)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread")

option(WITH_OPENCV "Compile with Open CV for rendering." OFF)
option(WITH_TESTS "Compile with tests." ON)

configure_file(CMakeConfig.h.in CMakeConfig.h)

########################################################################################################################
### Standalone App ###
########################################################################################################################
add_subdirectory(app)

########################################################################################################################
### Library ###
########################################################################################################################
add_subdirectory(src)

########################################################################################################################
### Examples ###
########################################################################################################################
add_subdirectory(evaluation)

################################################################################################
### Miscellaneous ###
########################################################################################################################
add_subdirectory(misc)

########################################################################################################################
### Testing ###
########################################################################################################################
if (WITH_TESTS)
    enable_testing()
    add_subdirectory(test)
endif ()