cmake_minimum_required(VERSION 3.10)

########################################################################################################################
### Project definition ###
########################################################################################################################
project(StaticCalibration C CXX)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread")

option(WITH_OPENCV "Compile with Open CV for rendering. Set to ON if you want to visualize the evaluation." OFF)
option(WITH_TESTS "Compile with tests. Set to on if you want to run the CTests." OFF)

configure_file(CMakeConfig.h.in CMakeConfig.h)

set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeModules)

########################################################################################################################
### External Dependencies ###
########################################################################################################################
add_subdirectory(extern)

########################################################################################################################
### Standalone App ###
########################################################################################################################
add_subdirectory(app)

########################################################################################################################
### Library ###
########################################################################################################################
add_subdirectory(src)

########################################################################################################################
### Examples ###
########################################################################################################################
add_subdirectory(evaluation)

########################################################################################################################
### Config ###
########################################################################################################################
add_subdirectory(config)

########################################################################################################################
### Miscellaneous ###
########################################################################################################################
add_subdirectory(misc)

########################################################################################################################
### Testing ###
########################################################################################################################
if (WITH_TESTS)
    enable_testing()
    add_subdirectory(test)
endif ()